# EDB

./: CMakeLists.txt  README.md
docs/: man-ptrace-zh.md  roadmap.md
src/: CMakeLists.txt  Debugger.cpp  Debugger.h  Displayer.cpp  Displayer.h  Table.cpp  Table.h  Watcher.cpp  Watcher.h  common.h  main.cpp
test_demo/: IOkiller.c  breakFunc.cpp  dummy.c  mem.cpp  memoryKiller.c  moveCwd.c  openFile.c  ptrace_me.c  regs.cpp  sheep  sheep.c  sheep.cpp  singstep.cpp  stackHeap.c  testBt.c
